IMVApi.h



/// \~chinese
/// \brief 枚举设备
/// \param pDeviceList [OUT] 设备列表
/// \param interfaceType [IN] 待枚举的接口类型, 类型可任意组合,如 interfaceTypeGige | interfaceTypeUsb3
/// \return 成功，返回IMV_OK；错误，返回错误码
/// \remarks
/// 1、当interfaceType = interfaceTypeAll  时，枚举所有接口下的在线设备\n
/// 2、当interfaceType = interfaceTypeGige 时，枚举所有GigE网口下的在线设备\n
/// 3、当interfaceType = interfaceTypeUsb3 时，枚举所有USB接口下的在线设备\n
/// 4、当interfaceType = interfaceTypeCL   时，枚举所有CameraLink接口下的在线设备\n
/// 5、该接口下的interfaceType支持任意接口类型的组合,如，若枚举所有GigE网口和USB3接口下的在线设备时,
/// 可将interfaceType设置为 interfaceType = interfaceTypeGige | interfaceTypeUsb3,其它接口类型组合以此类推
/// \~english
/// \brief Enumerate Device
/// \param pDeviceList [OUT] Device list
/// \param interfaceType [IN] The interface type you want to find, support any interface type combination, sucn as interfaceTypeGige | interfaceTypeUsb3
/// \return Success, return IMV_OK. Failure, return error code 
/// \remarks
/// 1、when interfaceType = interfaceTypeAll, enumerate devices in all interface types\n
/// 2、when interfaceType = interfaceTypeGige, enumerate devices in GigE interface \n
/// 3、when interfaceType = interfaceTypeUsb3, enumerate devices in USB interface\n
/// 4、when interfaceType = interfaceTypeCL, enumerate devices in CameraLink interface\n
/// 5、interfaceType supports any interface type combination. For example, if you want to find all GigE and USB3 devices,
/// you can set interfaceType as interfaceType = interfaceTypeGige | interfaceTypeUsb3.
IMV_API int IMV_CALL IMV_EnumDevices(OUT IMV_DeviceList *pDeviceList, IN unsigned int interfaceType);


/// \~chinese
/// \brief 通过指定标示符创建设备句柄，如指定索引、设备键、设备自定义名、IP地址
/// \param handle [OUT] 设备句柄
/// \param mode [IN] 创建设备方式
/// \param pIdentifier [IN] 指定标示符(设备键、设备自定义名、IP地址为char类型指针强转void类型指针，索引为unsigned int类型指针强转void类型指针)
/// \return 成功，返回IMV_OK；错误，返回错误码
/// \~english
/// \brief Create device handle by specifying identifiers, such as specifying index, device key, device userID, and IP address
/// \param handle [OUT] Device handle
/// \param mode [IN] Create handle mode
/// \param pIdentifier [IN] Specifying identifiers（device key, device userID, and IP address is char* forced to void*, index is unsigned int* forced to void*）
/// \return Success, return IMV_OK. Failure, return error code 
IMV_API int IMV_CALL IMV_CreateHandle(OUT IMV_HANDLE* handle, IN IMV_ECreateHandleMode mode, IN void* pIdentifier);


/// \~chinese
/// \brief 销毁设备句柄
/// \param handle [IN] 设备句柄
/// \return 成功，返回IMV_OK；错误，返回错误码
/// \~english
/// \brief Destroy device handle
/// \param handle [IN] Device handle
/// \return Success, return IMV_OK. Failure, return error code 
IMV_API int IMV_CALL IMV_DestroyHandle(IN IMV_HANDLE handle);


/// \~chinese
/// \brief 获取设备信息
/// \param handle [IN] 设备句柄
/// \param pDevInfo [OUT] 设备信息
/// \return 成功，返回IMV_OK；错误，返回错误码
/// \~english
/// \brief Get device information
/// \param handle [IN] Device handle
/// \param pDevInfo [OUT] Device information
/// \return Success, return IMV_OK. Failure, return error code 
IMV_API int IMV_CALL IMV_GetDeviceInfo(IN IMV_HANDLE handle, OUT IMV_DeviceInfo *pDevInfo);


/// \~chinese
/// \brief  打开设备
/// \param handle [IN] 设备句柄
/// \return 成功，返回IMV_OK；错误，返回错误码
/// \~english
/// \brief  Open Device
/// \param handle [IN] Device handle
/// \return Success, return IMV_OK. Failure, return error code 
IMV_API int IMV_CALL IMV_Open(IN IMV_HANDLE handle);


/// \~chinese
/// \brief  打开设备
/// \param handle [IN] 设备句柄
/// \param accessPermission [IN] 控制通道权限(IMV_Open默认使用accessPermissionControl权限)
/// \return 成功，返回IMV_OK；错误，返回错误码
/// \~english
/// \brief  Open Device
/// \param handle [IN] Device handle
/// \param accessPermission [IN] Control access permission(Default used accessPermissionControl in IMV_Open)
/// \return Success, return IMV_OK. Failure, return error code 
IMV_API int IMV_CALL IMV_OpenEx(IN IMV_HANDLE handle, IN IMV_ECameraAccessPermission accessPermission);


/// \~chinese
/// \brief 判断设备是否已打开
/// \param handle [IN] 设备句柄
/// \return 打开状态，返回true；关闭状态或者掉线状态，返回false
/// \~english
/// \brief Check whether device is opened or not
/// \param handle [IN] Device handle
/// \return Opened, return true. Closed or Offline, return false 
IMV_API bool IMV_CALL IMV_IsOpen(IN IMV_HANDLE handle);


/// \~chinese
/// \brief  关闭设备
/// \param handle [IN] 设备句柄
/// \return 成功，返回IMV_OK；错误，返回错误码
/// \~english
/// \brief Close Device
/// \param handle [IN] Device handle
/// \return Success, return IMV_OK. Failure, return error code 
IMV_API int IMV_CALL IMV_Close(IN IMV_HANDLE handle);


/// \~chinese
/// \brief 保存设备配置到指定的位置。同名文件已存在时，覆盖。
/// \param handle [IN] 设备句柄
/// \param pFullFileName [IN] 导出的设备配置文件全名(含路径)，如：D:\\config.xml 或 D:\\config.mvcfg
/// \return 成功，返回IMV_OK；错误，返回错误码
/// \~english 
/// \brief Save the configuration of the device. Overwrite the file if exists.
/// \param handle [IN] Device handle
/// \param pFullFileName [IN] The full path name of the property file(xml).  e.g. D:\\config.xml or D:\\config.mvcfg
/// \return Success, return IMV_OK. Failure, return error code 
IMV_API int IMV_CALL IMV_SaveDeviceCfg(IN IMV_HANDLE handle, IN const char* pFullFileName);


/// \~chinese
/// \brief 从文件加载设备xml配置
/// \param handle [IN] 设备句柄
/// \param pFullFileName [IN] 设备配置(xml)文件全名(含路径)，如：D:\\config.xml 或 D:\\config.mvcfg
/// \param pErrorList [OUT] 加载失败的属性名列表。存放加载失败的属性上限为IMV_MAX_ERROR_LIST_NUM。
/// \return 成功，返回IMV_OK；错误，返回错误码
/// \~english 
/// \brief load the configuration of the device
/// \param handle [IN] Device handle
/// \param pFullFileName [IN] The full path name of the property file(xml). e.g. D:\\config.xml or D:\\config.mvcfg
/// \param pErrorList [OUT] The list of load failed properties. The failed to load properties list up to IMV_MAX_ERROR_LIST_NUM.
/// \return Success, return IMV_OK. Failure, return error code 
IMV_API int IMV_CALL IMV_LoadDeviceCfg(IN IMV_HANDLE handle, IN const char* pFullFileName, OUT IMV_ErrorList* pErrorList);


/// \~chinese
/// \brief 获取一帧图像(同步获取帧数据机制)
/// \param handle [IN] 设备句柄
/// \param pFrame [OUT] 帧数据信息
/// \param timeoutMS [IN] 获取一帧图像的超时时间,INFINITE时表示无限等待,直到收到一帧数据或者停止取流。单位是毫秒
/// \return 成功，返回IMV_OK；错误，返回错误码
/// \remarks
/// 该接口不支持多线程调用。\n
/// 该同步获取帧机制和异步获取帧机制(IMV_AttachGrabbing)互斥,对于同一设备，系统中两者只能选其一。\n
/// 使用内部缓存获取图像，需要IMV_ReleaseFrame进行释放图像缓存。
/// \~english
/// \brief Get a frame image(synchronous getting frame data mechanism)
/// \param handle [IN] Device handle
/// \param pFrame [OUT] Frame data information
/// \param timeoutMS [IN] The time out of getting one image, INFINITE means infinite wait until the one frame data is returned or stop grabbing.unit is MS
/// \return Success, return IMV_OK. Failure, return error code 
/// \remarks
/// This interface does not support multi-threading.\n
/// This synchronous getting frame data mechanism and asynchronous getting frame data mechanism(IMV_AttachGrabbing) are mutually exclusive,\n
/// only one method can be chose between these two in system for the same device.\n
/// Use internal cache to get image, need to release image buffer by IMV_ReleaseFrame
IMV_API int IMV_CALL IMV_GetFrame(IN IMV_HANDLE handle, OUT IMV_Frame* pFrame, IN unsigned int timeoutMS);